--- a/index.html
+++ b/index.html
@@ -183,8 +183,16 @@ $(window).load(init)
             </tr>
         </table>
         <br />
-        <h3>What's new in demo-v0.0001</h3>
+        <h3>Release notes for demo-v0.0001</h3>
         <ul>
+            <li>Luciana and Kenji join the fray. 
+            Now all of the members of Ace's mercenary group, "Hellhounds", have assembled!</li>
+            <li>If <b>any</b> of your units die, you lose!! Be careful. You can't yet use Arrow's First Aid skill, so
+            Ace, Arrow, and Kenji have all received a temporary +10 buff to HP.</li>
+            <li>The weapon triangle is here. Swords beat axes, axes beat lances, and lances beat swords.</li>
+            <li>Use terrain to your advantage. Standing on a forest gives you big defensive bonuses!</li>
+            <li>Press E to end your turn early.</li>
+            <li>Some enemies won't move, while others will move to attack you if you enter their range.</li>
         </ul>
         This version has been tested in Firefox and Chrome. Please tell me if you find a bug.
     </div>
@@ -265,21 +273,38 @@ $(window).load(init)
     </div>
 </div>
 <div class="invisible-images">
+
 <img src="images/title_cropped.png"/>
+<img src="images/crown.png"/>
 <img src="images/bandit_insignia.png"/>
 <img src="images/list_arrow.png"/>
+<img src="images/up_arrow.png"/>
+<img src="images/down_arrow.png"/>
 <img src="images/logo.png"/>
+<img src="images/characters/luciana.png"/>
+<img src="images/characters/kenji.png"/>
 <img src="images/characters/arrow.png"/>
 <img src="images/characters/ace.png"/>
+<img src="images/terrain/plain.png"/>
+<img src="images/terrain/rocks.png"/>
+<img src="images/terrain/forest.png"/>
+<img src="images/dango/enemy/soldier.png"/>
+<img src="images/dango/enemy/fighter.png"/>
 <img src="images/dango/enemy/mercenary.png"/>
 <img src="images/dango/enemy/archer.png"/>
+<img src="images/dango/player/soldier.png"/>
+<img src="images/dango/player/fighter.png"/>
 <img src="images/dango/player/mercenary.png"/>
 <img src="images/dango/player/archer.png"/>
+<img src="images/dango/done/soldier.png"/>
+<img src="images/dango/done/fighter.png"/>
 <img src="images/dango/done/mercenary.png"/>
 <img src="images/dango/done/archer.png"/>
+<img src="images/items/iron_axe.png"/>
 <img src="images/items/steel_sword.png"/>
 <img src="images/items/iron_sword.png"/>
 <img src="images/items/iron_bow.png"/>
+<img src="images/items/iron_lance.png"/>
 
 </div>
 </body>
