--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/unit_info_window.css"/>
     <link rel="stylesheet" type="text/css" href="css/battle_stats_panel.css"/>
     <link rel="stylesheet" type="text/css" href="css/terrain_box.css"/>
+    <link rel="stylesheet" type="text/css" href="css/exp_bar.css"/>
     
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
@@ -22,8 +23,10 @@
     <script src="lib/ui/message.js"></script>
     <script src="lib/ui/endTurn.js"></script>
     <script src="lib/ui/terrainBox.js"></script>
+    <script src="lib/ui/expBar.js"></script>
 
     <script src="lib/chapter.js"></script>
+    <script src="lib/turn.js"></script>
     <script src="lib/playerTurn.js"></script>
     <script src="lib/enemyTurn.js"></script>
     <script src="lib/battle.js"></script>
@@ -139,6 +142,12 @@ $(window).load(init)
             <div class="canvas-dark-overlay"></div>
             <div class="end-turn neutral-box">
                 <div class="image"></div> End turn
+            </div>
+            <div class="exp-bar-container neutral-box">
+                EXP 
+                <div class="exp-bar">
+                    <div class="exp-bar-filled"></div>
+                </div>
             </div>
         </div>
         <div class="sidebar right-sidebar">
