--- a/index.html
+++ b/index.html
@@ -139,16 +139,93 @@ $(window).load(init)
         </div>
         <div class="canvas-container">
             <canvas width="420" height="350"></canvas>
+
             <div class="canvas-dark-overlay"></div>
+
             <div class="end-turn neutral-box">
                 <div class="image"></div> End turn
             </div>
+
             <div class="exp-bar-container neutral-box">
                 EXP 
                 <div class="exp-bar">
                     <div class="exp-bar-filled"></div>
                 </div>
             </div>
+
+            <div class="unit-info-window blue-box">
+                <div class="common">
+                    <div class="image-wrapper">
+                        <img />
+                    </div>
+                    <div>
+                        <div class="name"></div>
+                        <div class="uclass"></div>
+                        <div class="level-info">
+                            Lv <span class="level"></span>
+                            Exp <span class="exp"></span></div>
+                    </div>
+                </div>
+                <div class="tab-container">
+                    <div class="labels">
+                        <div class="tab-label-inventory">Inventory
+                            <span class="tab-id">inventory</span>
+                        </div><div class="tab-label-stats">
+                            <span class="tab-id">stats</span>
+                            Stats
+                        </div>
+                    </div>
+                    <div class="content">
+                        <div class="tab-content tab-content-inventory">
+                            <div class="inventory"></div>
+                            <div class="combat-stats">
+                                <table>
+                                    <tr>
+                                        <td>Hit</td>
+                                        <td class="stat hit"></td>
+                                        <td>Evade</td>
+                                        <td class="stat evade"></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Atk</td>
+                                        <td class="stat atk"></td>
+                                        <td>Crit</td>
+                                        <td class="stat crit"></td>
+                                    </tr>
+                                </table>
+                            </div>
+                        </div>
+                        <div class="tab-content tab-content-stats">
+                            <div class="stats">
+                                <table>
+                                    <tr>
+                                        <td>Str</td><td class="stat str"></td>
+                                        <td>Skill</td> <td class="stat skill"></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Mag</td><td class="stat mag"></td>
+                                        <td>Speed</td> <td class="stat speed"></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Def</td><td class="stat def"></td>
+                                        <td>Luck</td> <td class="stat luck"></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Res</td><td class="stat res"></td>
+                                        <td>Move</td> <td class="stat move"></td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <div class="wield">
+                                Wield:
+                                <div class="weapons">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
         <div class="sidebar right-sidebar">
             <div class="victory-condition neutral-box"></div>
@@ -207,80 +284,8 @@ $(window).load(init)
     </div>
 </div>
 
-<div class="dark-overlay"></div>
+<div class="viewport-overlay"></div>
 
-<div class="unit-info-window blue-box">
-    <div class="common">
-        <div class="image-wrapper">
-            <img />
-        </div>
-        <div>
-            <div class="name"></div>
-            <div class="uclass"></div>
-            <div class="level-info">
-                Lv <span class="level"></span>
-                Exp <span class="exp"></span></div>
-        </div>
-    </div>
-    <div class="tab-container">
-        <div class="labels">
-            <div class="tab-label-inventory">Inventory
-                <span class="tab-id">inventory</span>
-            </div><div class="tab-label-stats">
-                <span class="tab-id">stats</span>
-                Stats
-            </div>
-        </div>
-        <div class="content">
-            <div class="tab-content tab-content-inventory">
-                <div class="inventory"></div>
-                <div class="combat-stats">
-                    <table>
-                        <tr>
-                            <td>Hit</td>
-                            <td class="stat hit"></td>
-                            <td>Evade</td>
-                            <td class="stat evade"></td>
-                        </tr>
-                        <tr>
-                            <td>Atk</td>
-                            <td class="stat atk"></td>
-                            <td>Crit</td>
-                            <td class="stat crit"></td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-            <div class="tab-content tab-content-stats">
-                <div class="stats">
-                    <table>
-                        <tr>
-                            <td>Str</td><td class="stat str"></td>
-                            <td>Skill</td> <td class="stat skill"></td>
-                        </tr>
-                        <tr>
-                            <td>Mag</td><td class="stat mag"></td>
-                            <td>Speed</td> <td class="stat speed"></td>
-                        </tr>
-                        <tr>
-                            <td>Def</td><td class="stat def"></td>
-                            <td>Luck</td> <td class="stat luck"></td>
-                        </tr>
-                        <tr>
-                            <td>Res</td><td class="stat res"></td>
-                            <td>Move</td> <td class="stat move"></td>
-                        </tr>
-                    </table>
-                </div>
-                <div class="wield">
-                    Wield:
-                    <div class="weapons">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 <div class="invisible-images">
 
 <img src="images/title_cropped.png"/>
