--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" type="text/css" href="css/menu.css"/>
     <link rel="stylesheet" type="text/css" href="css/unit_info_box.css"/>
     <link rel="stylesheet" type="text/css" href="css/unit_info_window.css"/>
-    <link rel="stylesheet" type="text/css" href="css/level_up_window.css"/>
     <link rel="stylesheet" type="text/css" href="css/battle_stats_panel.css"/>
     <link rel="stylesheet" type="text/css" href="css/terrain_box.css"/>
     <link rel="stylesheet" type="text/css" href="css/exp_bar.css"/>
@@ -235,31 +234,77 @@ $(window).load(init)
                     </div>
                     <div>
                         <div class="name"></div>
-                        <div class="uclass"></div>
                         <div class="level-info">
                             Lv <span class="level"></span>
-                            Exp <span class="exp"></span></div>
+                        </div>
                     </div>
                 </div>
-                <div class="stats">
-                    <table>
-                        <tr>
-                            <td>Str</td><td class="stat str"></td>
-                            <td>Skill</td> <td class="stat skill"></td>
-                        </tr>
-                        <tr>
-                            <td>Mag</td><td class="stat mag"></td>
-                            <td>Speed</td> <td class="stat speed"></td>
-                        </tr>
-                        <tr>
-                            <td>Def</td><td class="stat def"></td>
-                            <td>Luck</td> <td class="stat luck"></td>
-                        </tr>
-                        <tr>
-                            <td>Res</td><td class="stat res"></td>
-                            <td>Move</td> <td class="stat move"></td>
-                        </tr>
-                    </table>
+                <div class="stats-container">
+                    <span class="level-up">Level up!</span>
+                    <div class="stats">
+                        <table>
+                            <tr>
+                                <td class="label">HP</td>
+                                <td class="stat hp">
+                                    <span></span><img src="images/up_arrow.png" />
+                                </td>
+
+                                <td class="label">MP</td>
+                                <td class="stat mp">
+                                    <span></span><img src="images/up_arrow.png" />
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td class="label">STR</td>
+                                <td class="stat str">
+                                    <span></span><img src="images/up_arrow.png" />
+                                </td>
+
+                                <td class="label">SKILL</td>
+                                <td class="stat skill">
+                                    <span></span><img src="images/up_arrow.png" />
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td class="label">MAG</td>
+                                <td class="stat mag">
+                                    <span></span><img src="images/up_arrow.png" />
+                                </td>
+
+                                <td class="label">SPEED</td>
+                                <td class="stat speed">
+                                    <span></span><img src="images/up_arrow.png" />
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td class="label">DEF</td>
+                                <td class="stat def">
+                                    <span></span><img src="images/up_arrow.png" />
+                                </td>
+
+                                <td class="label">LUCK</td>
+                                <td class="stat luck">
+                                    <span></span><img src="images/up_arrow.png" />
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td class="label">RES</td>
+                                <td class="stat res">
+                                    <span></span><img src="images/up_arrow.png" />
+                                </td>
+
+                                <td class="label">MOVE</td>
+                                <td class="stat move">
+                                    <span></span><img src="images/up_arrow.png" />
+                                </td>
+                            </tr>
+
+                        </table>
+                    </div>
                 </div>
             </div>
 
