unit-info-window label text

--- a/index.html
+++ b/index.html
@@ -182,15 +182,15 @@ $(window).load(init)
                             <div class="combat-stats">
                                 <table>
                                     <tr>
-                                        <td>Hit</td>
+                                        <td class="label">HIT</td>
                                         <td class="stat hit"></td>
-                                        <td>Evade</td>
+                                        <td class="label">EVADE</td>
                                         <td class="stat evade"></td>
                                     </tr>
                                     <tr>
-                                        <td>Atk</td>
+                                        <td class="label">ATK</td>
                                         <td class="stat atk"></td>
-                                        <td>Crit</td>
+                                        <td class="label">CRIT</td>
                                         <td class="stat crit"></td>
                                     </tr>
                                 </table>
@@ -200,20 +200,28 @@ $(window).load(init)
                             <div class="stats">
                                 <table>
                                     <tr>
-                                        <td>Str</td><td class="stat str"></td>
-                                        <td>Skill</td> <td class="stat skill"></td>
+                                        <td class="label">STR</td>
+                                        <td class="stat str"></td>
+                                        <td class="label">SKILL</td>
+                                        <td class="stat skill"></td>
                                     </tr>
                                     <tr>
-                                        <td>Mag</td><td class="stat mag"></td>
-                                        <td>Speed</td> <td class="stat speed"></td>
+                                        <td class="label">MAG</td>
+                                        <td class="stat mag"></td>
+                                        <td class="label">SPEED</td>
+                                        <td class="stat speed"></td>
                                     </tr>
                                     <tr>
-                                        <td>Def</td><td class="stat def"></td>
-                                        <td>Luck</td> <td class="stat luck"></td>
+                                        <td class="label">DEF</td>
+                                        <td class="stat def"></td>
+                                        <td class="label">LUCK</td>
+                                        <td class="stat luck"></td>
                                     </tr>
                                     <tr>
-                                        <td>Res</td><td class="stat res"></td>
-                                        <td>Move</td> <td class="stat move"></td>
+                                        <td class="label">RES</td>
+                                        <td class="stat res"></td>
+                                        <td class="label">MOVE</td>
+                                        <td class="stat move"></td>
                                     </tr>
                                 </table>
                             </div>
