Level up complete!

--- a/index.html
+++ b/index.html
@@ -253,12 +253,12 @@ $(window).load(init)
                         <table>
                             <tr>
                                 <td class="label">HP</td>
-                                <td class="stat hp">
+                                <td class="stat baseHp">
                                     <span></span><img src="images/up_arrow.png" />
                                 </td>
 
                                 <td class="label">MP</td>
-                                <td class="stat mp">
+                                <td class="stat baseMp">
                                     <span></span><img src="images/up_arrow.png" />
                                 </td>
                             </tr>
