Work on trade feature

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/menu.css"/>
     <link rel="stylesheet" type="text/css" href="css/unit_info_box.css"/>
     <link rel="stylesheet" type="text/css" href="css/unit_info_window.css"/>
+    <link rel="stylesheet" type="text/css" href="css/trade_window.css"/>
     <link rel="stylesheet" type="text/css" href="css/battle_stats_panel.css"/>
     <link rel="stylesheet" type="text/css" href="css/terrain_box.css"/>
     <link rel="stylesheet" type="text/css" href="css/exp_bar.css"/>
@@ -18,6 +19,7 @@
     <script src="lib/ui/unitInfoBox.js"></script>
     <script src="lib/ui/unitInfoWindow.js"></script>
     <script src="lib/ui/levelUpWindow.js"></script>
+    <script src="lib/ui/tradeWindow.js"></script>
     <script src="lib/ui/actionMenu.js"></script>
     <script src="lib/ui/weaponMenu.js"></script>
     <script src="lib/ui/battleStatsPanel.js"></script>
@@ -314,6 +316,10 @@ $(window).load(init)
                         </table>
                     </div>
                 </div>
+            </div>
+
+            <div class="trade-window">
+
             </div>
 
         </div>
