Work on skills tab

--- a/index.html
+++ b/index.html
@@ -389,7 +389,9 @@ $(window).load(init)
 
     <div class="tab-content tab-content-skills">
         <div class="skills">
-            Skills go here!
+        </div>
+        <div class="controls">
+            S - view skill info
         </div>
     </div>
 
