Add skillsBox object

--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
     <script src="lib/ui/ui.js"></script>
+
     <script src="lib/ui/unitInfoBox.js"></script>
     <script src="lib/ui/unitInfoWindow.js"></script>
+    <script src="lib/ui/skillsBox.js"></script>
     <script src="lib/ui/levelUpWindow.js"></script>
+
     <script src="lib/ui/tradeWindow.js"></script>
     <script src="lib/ui/actionMenu.js"></script>
     <script src="lib/ui/weaponMenu.js"></script>
@@ -391,7 +394,7 @@ $(window).load(init)
         <div class="skills">
         </div>
         <div class="controls">
-            S - view skill info
+           S - view skill info
         </div>
     </div>
 
