Begin work on CsSkillsBox

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/battle_stats_panel.css"/>
     <link rel="stylesheet" type="text/css" href="css/terrain_box.css"/>
     <link rel="stylesheet" type="text/css" href="css/exp_bar.css"/>
+    <link rel="stylesheet" type="text/css" href="css/skills.css"/>
     
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
@@ -391,7 +392,7 @@ $(window).load(init)
     <div class="tab-label-skills"><span class="tab-id">skills</span>Skills</div>
 
     <div class="tab-content tab-content-skills">
-        <div class="skills">
+        <div class="skills-box">
         </div>
         <div class="controls">
            S - view skill info
