Start work on skillInfoBox

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="lib/ui/unitInfoBox.js"></script>
     <script src="lib/ui/unitInfoWindow.js"></script>
     <script src="lib/ui/skillsBox.js"></script>
+    <script src="lib/ui/skillInfoBox.js"></script>
     <script src="lib/ui/levelUpWindow.js"></script>
 
     <script src="lib/ui/tradeWindow.js"></script>
@@ -239,6 +240,9 @@ $(window).load(init)
                         </div>
                     </div>
                 </div>
+            </div>
+
+            <div class="skill-info-box neutral-box">
             </div>
 
             <div class="level-up-window blue-box">
