Complete skill-info-box (at least for Defend skill)

--- a/index.html
+++ b/index.html
@@ -243,6 +243,22 @@ $(window).load(init)
             </div>
 
             <div class="skill-info-box neutral-box">
+                <div class="heading">
+                    <img />
+                    <span></span>
+                </div>
+                <div class="usage-container">
+                    <table class="usage">
+                        <tr>
+                            <td class="label">MP</td>
+                            <td class="value mp"></td>
+                            <td class="label">COOLDOWN</td>
+                            <td class="value cooldown"></td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="desc">
+                </div>
             </div>
 
             <div class="level-up-window blue-box">
