Start working on using skills

--- a/index.html
+++ b/index.html
@@ -95,6 +95,28 @@ $(window).load(init)
             </div>
             <div class="menu weapon-menu neutral-box">
             </div>
+            <div class="skills-box">
+            </div>
+
+            <div class="skill-info-box neutral-box">
+                <div class="heading">
+                    <img />
+                    <span></span>
+                </div>
+                <div class="usage-container">
+                    <table class="usage">
+                        <tr>
+                            <td class="label">MP</td>
+                            <td class="value mp"></td>
+                            <td class="label">COOLDOWN</td>
+                            <td class="value cooldown"></td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="desc">
+                </div>
+            </div>
+
             <div class="battle-stats-panel">
                 <table>
                     <tr>
@@ -239,25 +261,6 @@ $(window).load(init)
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-
-            <div class="skill-info-box neutral-box">
-                <div class="heading">
-                    <img />
-                    <span></span>
-                </div>
-                <div class="usage-container">
-                    <table class="usage">
-                        <tr>
-                            <td class="label">MP</td>
-                            <td class="value mp"></td>
-                            <td class="label">COOLDOWN</td>
-                            <td class="value cooldown"></td>
-                        </tr>
-                    </table>
-                </div>
-                <div class="desc">
                 </div>
             </div>
 
