Work on UnitAction

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <script src="lib/playerTurn.js"></script>
     <script src="lib/enemyTurn.js"></script>
     <script src="lib/battle.js"></script>
+    <script src="lib/unitAction.js"></script>
 
     <script src="lib/map.js"></script>
     <script src="lib/csmap.js"></script>
