Defend skill complete!

--- a/index.html
+++ b/index.html
@@ -105,14 +105,8 @@ $(window).load(init)
                     <span></span>
                 </div>
                 <div class="usage-container">
-                    <table class="usage">
-                        <tr>
-                            <td class="label">MP</td>
-                            <td class="value mp"></td>
-                            <td class="label">COOLDOWN</td>
-                            <td class="value cooldown"></td>
-                        </tr>
-                    </table>
+                    <span class="label">MP</span>
+                    <span class="mp"></span>
                 </div>
                 <div class="desc">
                 </div>
