--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <body>
 <div class="title">
 <img src="images/title_cropped.png" />
-<div class="version">demo-v0.0001</div>
+<div class="version">demo-v0.001</div>
 </div>
 <script>
 $(window).load(init)
@@ -173,8 +173,7 @@ $(window).load(init)
             </div>
 
             <div class="exp-bar-container neutral-box">
-                EXP 
-                <div class="exp-bar">
+                EXP<div class="exp-bar">
                     <div class="exp-bar-filled"></div>
                 </div>
             </div>
@@ -379,7 +378,7 @@ $(window).load(init)
             </tr>
             <tr>
                 <td class="control">S:</td>
-                <td>more info (units)</td>
+                <td>more info (units, skills)</td>
             </tr>
             <tr>
                 <td class="control">E:</td>
@@ -387,16 +386,22 @@ $(window).load(init)
             </tr>
         </table>
         <br />
-        <h3>Release notes for demo-v0.0001</h3>
+        <h3>Release notes for demo-v0.001</h3>
         <ul>
-            <li>Luciana and Kenji join the fray. 
-            Now all of the members of Ace's mercenary group, "Hellhounds", have assembled!</li>
-            <li>If <b>any</b> of your units die, you lose!! Be careful. You can't yet use Arrow's First Aid skill, so
-            Ace, Arrow, and Kenji have all received a temporary +10 buff to HP.</li>
-            <li>The weapon triangle is here. Swords beat axes, axes beat lances, and lances beat swords.</li>
-            <li>Use terrain to your advantage. Standing on a forest gives you big defensive bonuses!</li>
-            <li>Press E to end your turn early.</li>
-            <li>Some enemies won't move, while others will move to attack you if you enter their range.</li>
+            <li>Units gain experience in each battle. Once a unit builds up 100 exp, they level up.</li>
+            <li>Trade items between units by choosing the "Trade" option from the action menu.</li>
+            <li>Skills system. Choose "Skill" from the action menu to use a skill. There is
+                only one skill right now (Defend), which everyone has. More skills will be added in the
+                future. A "Skills" tab has also been added to the unit info window (which appears when you press S
+                while the cursor is over a unit.)
+            </li>
+            <li>Using a skill takes a certain amount of MP. A unit regains 1 MP for every regular attack it lands.</li>
+            <li>Status system. Units that have a special status are marked with an orange circle. Move the cursor to
+            a unit to view its list of statuses. There is currently only one status, Defend, which signifies that a
+            unit has used the Defend skill.</li>
+            <li>Base stats and growth rates have been rebalanced. I'll continue to rebalance things as new skills,
+            units, and chapters are added.</li>
+            <li>Kenji has received cosmetic plastic surgery, becuz he was ugli before.</li>
         </ul>
         This version has been tested in Firefox and Chrome. Please tell me if you find a bug.
     </div>
@@ -425,6 +430,7 @@ $(window).load(init)
 <img src="images/up_arrow.png"/>
 <img src="images/down_arrow.png"/>
 <img src="images/logo.png"/>
+<img src="images/skills/defend.png"/>
 <img src="images/characters/luciana.png"/>
 <img src="images/characters/kenji.png"/>
 <img src="images/characters/arrow.png"/>
@@ -449,6 +455,7 @@ $(window).load(init)
 <img src="images/items/iron_sword.png"/>
 <img src="images/items/iron_bow.png"/>
 <img src="images/items/iron_lance.png"/>
+
 
 </div>
 </body>
