--- a/html/template.html
+++ b/html/template.html
@@ -4,52 +4,8 @@
     <title>Aqua Emblem</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-    <link rel="stylesheet" type="text/css" href="css/main.css"/>
-    <link rel="stylesheet" type="text/css" href="css/menu.css"/>
-    <link rel="stylesheet" type="text/css" href="css/unit_info_box.css"/>
-    <link rel="stylesheet" type="text/css" href="css/unit_info_window.css"/>
-    <link rel="stylesheet" type="text/css" href="css/trade_window.css"/>
-    <link rel="stylesheet" type="text/css" href="css/battle_stats_panel.css"/>
-    <link rel="stylesheet" type="text/css" href="css/terrain_box.css"/>
-    <link rel="stylesheet" type="text/css" href="css/exp_bar.css"/>
-    <link rel="stylesheet" type="text/css" href="css/skills.css"/>
-    
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-
-    <script src="lib/ui/ui.js"></script>
-
-    <script src="lib/ui/unitInfoBox.js"></script>
-    <script src="lib/ui/unitInfoWindow.js"></script>
-    <script src="lib/ui/skillsBox.js"></script>
-    <script src="lib/ui/skillInfoBox.js"></script>
-    <script src="lib/ui/levelUpWindow.js"></script>
-
-    <script src="lib/ui/tradeWindow.js"></script>
-    <script src="lib/ui/actionMenu.js"></script>
-    <script src="lib/ui/weaponMenu.js"></script>
-    <script src="lib/ui/battleStatsPanel.js"></script>
-    <script src="lib/ui/message.js"></script>
-    <script src="lib/ui/endTurn.js"></script>
-    <script src="lib/ui/terrainBox.js"></script>
-    <script src="lib/ui/expBar.js"></script>
-
-    <script src="lib/chapter.js"></script>
-    <script src="lib/turn.js"></script>
-    <script src="lib/playerTurn.js"></script>
-    <script src="lib/enemyTurn.js"></script>
-    <script src="lib/battle.js"></script>
-    <script src="lib/unitAction.js"></script>
-
-    <script src="lib/map.js"></script>
-    <script src="lib/csmap.js"></script>
-
-    <script src="lib/item.js"></script>
-    <script src="lib/unit.js"></script>
-    <script src="lib/uclass.js"></script>
-    <script src="lib/skill.js"></script>
-
-    <script src="lib/chapters/chapter1.js"></script>
-
+    {css}
+    {js} 
 </head>
 <body>
 <div class="title">
@@ -362,48 +318,7 @@ $(window).load(init)
         </div>
     </div>
     <div class="game-info">
-        <h3>Controls</h3>
-        <table>
-            <tr>
-                <td class="control">Arrow keys:</td>
-                <td>move cursor / switch tabs</td>
-            </tr>
-            <tr>
-                <td class="control">F:</td>
-                <td>select / choose</td>
-            </tr>
-            <tr>
-                <td class="control">D:</td>
-                <td>back</td>
-            </tr>
-            <tr>
-                <td class="control">S:</td>
-                <td>more info (units, skills)</td>
-            </tr>
-            <tr>
-                <td class="control">E:</td>
-                <td>end turn</td>
-            </tr>
-        </table>
-        <br />
-        <h3>Release notes for demo-v0.001</h3>
-        <ul>
-            <li>Units gain experience in each battle. Once a unit builds up 100 exp, they level up.</li>
-            <li>Trade items between units by choosing the "Trade" option from the action menu.</li>
-            <li>Skills system. Choose "Skill" from the action menu to use a skill. There is
-                only one skill right now (Defend), which everyone has. More skills will be added in the
-                future. A "Skills" tab has also been added to the unit info window (which appears when you press S
-                while the cursor is over a unit.)
-            </li>
-            <li>Using a skill takes a certain amount of MP. A unit regains 1 MP for every regular attack it lands.</li>
-            <li>Status system. Units that have a special status are marked with an orange circle. Move the cursor to
-            a unit to view its list of statuses. There is currently only one status, Defend, which signifies that a
-            unit has used the Defend skill.</li>
-            <li>Base stats and growth rates have been rebalanced. I'll continue to rebalance things as new skills,
-            units, and chapters are added.</li>
-            <li>Kenji has received cosmetic plastic surgery, becuz he was ugli before.</li>
-        </ul>
-        This version has been tested in Firefox and Chrome. Please tell me if you find a bug.
+        {game_info}
     </div>
 </div>
 
