--- a/html/template.html
+++ b/html/template.html
@@ -19,105 +19,13 @@ $(window).load(init)
 <div class="wrapper">
     <div class="game-wrapper">
         <div class="sidebar left-sidebar">
-            <div class="unit-info">
-                <div class="image-wrapper">
-                    <img />
-                </div>
-                <div class="not-image">
-                    <div>
-                        <span class="name">.</span>
-                        <img class="equipped" />
-                    </div>
-                    <div class="hp-bar-container bar-container">
-                        <div class="bar hp-bar">
-                            <div class="bar-filled hp-bar-filled"></div>
-                        </div>
-                        <div class="bar-text">HP 
-                            <span class="hp"></span> /
-                            <span class="base-hp"></span>
-                        </div>
-                    </div>
-                    <div class="mp-bar-container bar-container">
-                        <div class="bar mp-bar">
-                            <div class="bar-filled mp-bar-filled"></div>
-                        </div>
-                        <div class="bar-text">MP 
-                            <span class="mp"></span> /
-                            <span class="base-mp"></span>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            {unit_info_box}
             <div class="menu action-menu neutral-box">
             </div>
             <div class="menu weapon-menu neutral-box">
             </div>
-            <div class="skills-box">
-            </div>
-
-            <div class="skill-info-box neutral-box">
-                <div class="heading">
-                    <img />
-                    <span></span>
-                </div>
-                <div class="usage-container">
-                    <span class="label">MP</span>
-                    <span class="mp"></span>
-                </div>
-                <div class="desc">
-                </div>
-            </div>
-
-            <div class="battle-stats-panel">
-                <table>
-                    <tr>
-                        <td colspan="3" class="atk-name blue-box">
-                            <span></span><img class="weapon-arrow" /><img class="weapon" />
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="stat def-hp red-box">
-                            <span class="stat"></span>
-                        </td>
-                        <td class="hp neutral-box">HP</td>
-                        <td class="stat atk-hp blue-box">
-                            <span class="stat"></span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="stat def-hit red-box">
-                            <span class="stat"></span>
-                        </td>
-                        <td class="hit neutral-box">HIT</td>
-                        <td class="stat atk-hit blue-box">
-                            <span class="stat"></span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="stat def-dmg red-box">
-                            <span class="stat"></span><span class="x2">&times;2</span>
-                        </td>
-                        <td class="dmg neutral-box">DMG</td>
-                        <td class="stat atk-dmg blue-box">
-                            <span class="stat"></span><span class="x2">&times;2</span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="stat def-crt red-box">
-                            <span class="stat"></span>
-                        </td>
-                        <td class="crt neutral-box">CRT</td>
-                        <td class="stat atk-crt blue-box">
-                            <span class="stat"></span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td colspan="3" class="def-name red-box">
-                            <img class="weapon-arrow" /><img class="weapon" /><span></span>
-                        </td>
-                    </tr>
-                </table>
-            </div>
+            {skills_box}
+            {battle_stats_panel}
         </div>
         <div class="canvas-container">
             <canvas width="420" height="350"></canvas>
@@ -134,187 +42,13 @@ $(window).load(init)
                 </div>
             </div>
 
-            <div class="unit-info-window blue-box">
-                <div class="common">
-                    <div class="image-wrapper">
-                        <img />
-                    </div>
-                    <div>
-                        <div class="name"></div>
-                        <div class="uclass"></div>
-                        <div class="level-info">
-                            Lv <span class="level"></span>
-                            Exp <span class="exp"></span></div>
-                    </div>
-                </div>
-                <div class="tab-container">
-                    <div class="labels">
-                        <div class="tab-label-inventory">Items
-                            <span class="tab-id">inventory</span>
-                        </div><div class="tab-label-stats">
-                            <span class="tab-id">stats</span>
-                            Stats
-                        </div></div>
-                    <div class="content">
-                        <div class="tab-content tab-content-inventory">
-                            <div class="inventory"></div>
-                            <div class="combat-stats">
-                                <table>
-                                    <tr>
-                                        <td class="label">HIT</td>
-                                        <td class="stat hit"></td>
-                                        <td class="label">EVADE</td>
-                                        <td class="stat evade"></td>
-                                    </tr>
-                                    <tr>
-                                        <td class="label">ATK</td>
-                                        <td class="stat atk"></td>
-                                        <td class="label">CRIT</td>
-                                        <td class="stat crit"></td>
-                                    </tr>
-                                </table>
-                            </div>
-                        </div>
-                        <div class="tab-content tab-content-stats">
-                            <div class="stats">
-                                <table>
-                                    <tr>
-                                        <td class="label">STR</td>
-                                        <td class="stat str"></td>
-                                        <td class="label">SKILL</td>
-                                        <td class="stat skill"></td>
-                                    </tr>
-                                    <tr>
-                                        <td class="label">MAG</td>
-                                        <td class="stat mag"></td>
-                                        <td class="label">SPEED</td>
-                                        <td class="stat speed"></td>
-                                    </tr>
-                                    <tr>
-                                        <td class="label">DEF</td>
-                                        <td class="stat def"></td>
-                                        <td class="label">LUCK</td>
-                                        <td class="stat luck"></td>
-                                    </tr>
-                                    <tr>
-                                        <td class="label">RES</td>
-                                        <td class="stat res"></td>
-                                        <td class="label">MOVE</td>
-                                        <td class="stat move"></td>
-                                    </tr>
-                                </table>
-                            </div>
-                            <div class="wield">
-                                Wield:
-                                <div class="weapons">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="level-up-window blue-box">
-                <div class="common">
-                    <div class="image-wrapper">
-                        <img />
-                    </div>
-                    <div>
-                        <div class="name"></div>
-                        <div class="level-info">
-                            Lv <span class="level"></span>
-                        </div>
-                    </div>
-                </div>
-                <div class="stats-container">
-                    <span class="level-up">Level up!</span>
-                    <div class="stats">
-                        <table>
-                            <tr>
-                                <td class="label">HP</td>
-                                <td class="stat baseHp">
-                                    <span></span><img src="images/up_arrow.png" />
-                                </td>
-
-                                <td class="label">MP</td>
-                                <td class="stat baseMp">
-                                    <span></span><img src="images/up_arrow.png" />
-                                </td>
-                            </tr>
-
-                            <tr>
-                                <td class="label">STR</td>
-                                <td class="stat str">
-                                    <span></span><img src="images/up_arrow.png" />
-                                </td>
-
-                                <td class="label">SKILL</td>
-                                <td class="stat skill">
-                                    <span></span><img src="images/up_arrow.png" />
-                                </td>
-                            </tr>
-
-                            <tr>
-                                <td class="label">MAG</td>
-                                <td class="stat mag">
-                                    <span></span><img src="images/up_arrow.png" />
-                                </td>
-
-                                <td class="label">SPEED</td>
-                                <td class="stat speed">
-                                    <span></span><img src="images/up_arrow.png" />
-                                </td>
-                            </tr>
-
-                            <tr>
-                                <td class="label">DEF</td>
-                                <td class="stat def">
-                                    <span></span><img src="images/up_arrow.png" />
-                                </td>
-
-                                <td class="label">LUCK</td>
-                                <td class="stat luck">
-                                    <span></span><img src="images/up_arrow.png" />
-                                </td>
-                            </tr>
-
-                            <tr>
-                                <td class="label">RES</td>
-                                <td class="stat res">
-                                    <span></span><img src="images/up_arrow.png" />
-                                </td>
-
-                                <td class="label">MOVE</td>
-                                <td class="stat move">
-                                    <span></span><img src="images/up_arrow.png" />
-                                </td>
-                            </tr>
-
-                        </table>
-                    </div>
-                </div>
-            </div>
-
-            <div class="trade-window">
-
-            </div>
-
+            {unit_info_window}
+            {level_up_window}
+            <div class="trade-window"></div>
         </div>
         <div class="sidebar right-sidebar">
             <div class="victory-condition neutral-box"></div>
-            <div class="terrain-box neutral-box">
-                <img /><span class="name"></span>
-                <table>
-                    <tr>
-                        <td class="label">EVADE</td>
-                        <td class="stat evade"></td>
-                    </tr>
-                    <tr>
-                        <td class="label">DEF/RES</td>
-                        <td class="stat def"></td>
-                    </tr>
-                </table>
-            </div>
+            {terrain_box}
         </div>
     </div>
     <div class="game-info">
@@ -326,52 +60,8 @@ $(window).load(init)
 <div class="viewport-overlay"></div>
 
 <div class="invisible">
-
-    <div class="tab-label-skills"><span class="tab-id">skills</span>Skills</div>
-
-    <div class="tab-content tab-content-skills">
-        <div class="skills-box">
-        </div>
-        <div class="controls">
-           S - view skill info
-        </div>
-    </div>
-
-<!-- Images go here -->
-<img src="images/title_cropped.png"/>
-<img src="images/crown.png"/>
-<img src="images/bandit_insignia.png"/>
-<img src="images/list_arrow.png"/>
-<img src="images/up_arrow.png"/>
-<img src="images/down_arrow.png"/>
-<img src="images/logo.png"/>
-<img src="images/skills/defend.png"/>
-<img src="images/characters/luciana.png"/>
-<img src="images/characters/kenji.png"/>
-<img src="images/characters/arrow.png"/>
-<img src="images/characters/ace.png"/>
-<img src="images/terrain/plain.png"/>
-<img src="images/terrain/rocks.png"/>
-<img src="images/terrain/forest.png"/>
-<img src="images/dango/enemy/soldier.png"/>
-<img src="images/dango/enemy/fighter.png"/>
-<img src="images/dango/enemy/mercenary.png"/>
-<img src="images/dango/enemy/archer.png"/>
-<img src="images/dango/player/soldier.png"/>
-<img src="images/dango/player/fighter.png"/>
-<img src="images/dango/player/mercenary.png"/>
-<img src="images/dango/player/archer.png"/>
-<img src="images/dango/done/soldier.png"/>
-<img src="images/dango/done/fighter.png"/>
-<img src="images/dango/done/mercenary.png"/>
-<img src="images/dango/done/archer.png"/>
-<img src="images/items/iron_axe.png"/>
-<img src="images/items/steel_sword.png"/>
-<img src="images/items/iron_sword.png"/>
-<img src="images/items/iron_bow.png"/>
-<img src="images/items/iron_lance.png"/>
-
-
+    {skills_tab}
+    {images}
 </div>
 </body>
 </html>
