--- a/html/game_info.html
+++ b/html/game_info.html
@@ -20,23 +20,13 @@
         <td class="control">E:</td>
         <td>end turn</td>
     </tr>
+    <tr>
+        <td class="control">Spacebar:</td>
+        <td>hold to play at 3x speed</td>
+    </tr>
 </table>
 <br />
-<h3>Release notes for demo-v0.001</h3>
+<h3>Release notes for demo-v0.01</h3>
 <ul>
-    <li>Units gain experience in each battle. Once a unit builds up 100 exp, they level up.</li>
-    <li>Trade items between units by choosing the "Trade" option from the action menu.</li>
-    <li>Skills system. Choose "Skill" from the action menu to use a skill. There is
-        only one skill right now (Defend), which everyone has. More skills will be added in the
-        future. A "Skills" tab has also been added to the unit info window (which appears when you press S
-        while the cursor is over a unit.)
-    </li>
-    <li>Using a skill takes a certain amount of MP. A unit regains 1 MP for every regular attack it lands.</li>
-    <li>Status system. Units that have a special status are marked with an orange circle. Move the cursor to
-    a unit to view its list of statuses. There is currently only one status, Defend, which signifies that a
-    unit has used the Defend skill.</li>
-    <li>Base stats and growth rates have been rebalanced. I'll continue to rebalance things as new skills,
-    units, and chapters are added.</li>
-    <li>Kenji has received cosmetic plastic surgery, becuz he was ugli before.</li>
 </ul>
 This version has been tested in Firefox and Chrome. Please tell me if you find a bug.
