--- a/html/template.html
+++ b/html/template.html
@@ -10,7 +10,7 @@
 <body>
 <div class="title">
 <img src="images/title_cropped.png" />
-<div class="version">demo-v0.001</div>
+<div class="version">demo-v0.01</div>
 </div>
 <script>
 $(window).load(init)
@@ -49,6 +49,7 @@ $(window).load(init)
         <div class="sidebar right-sidebar">
             <div class="victory-condition neutral-box"></div>
             {terrain_box}
+            <div class="speed-multiplier-box alert-box">3x speed</div>
         </div>
     </div>
     <div class="game-info">
