--- a/html/game_info.html
+++ b/html/game_info.html
@@ -22,7 +22,7 @@
     </tr>
     <tr>
         <td class="control">Spacebar:</td>
-        <td>hold to play at 3x speed</td>
+        <td>toggle 3x speed</td>
     </tr>
 </table>
 <br />
