Refactoring and fix offscreen cursor

--- a/html/game_info.html
+++ b/html/game_info.html
@@ -21,7 +21,7 @@
         <td>end turn</td>
     </tr>
     <tr>
-        <td class="control">Spacebar:</td>
+        <td class="control">V:</td>
         <td>toggle 3x speed</td>
     </tr>
 </table>
