--- a/html/skills_box.html
+++ b/html/skills_box.html
@@ -12,8 +12,9 @@
                 <span class="label">MP</span>
                 <span class="mp value"></span>
             </div>
-            <div class="half">
-                <span class="type"></span>
+            <div class="half half-type">
+                <span class="label">TYPE</span>
+                <span class="type value"></span>
             </div>
         </div>
         <div class="row-might-range">
