Refactoring, changing names of stats

--- a/html/level_up_window.html
+++ b/html/level_up_window.html
@@ -16,12 +16,12 @@
             <table>
                 <tr>
                     <td class="label">HP</td>
-                    <td class="stat baseHp">
+                    <td class="stat maxHp">
                         <span></span><img src="images/up_arrow.png" />
                     </td>
 
                     <td class="label">MP</td>
-                    <td class="stat baseMp">
+                    <td class="stat maxMp">
                         <span></span><img src="images/up_arrow.png" />
                     </td>
                 </tr>
