--- a/html/unit_info_box.html
+++ b/html/unit_info_box.html
@@ -13,7 +13,7 @@
             </div>
             <div class="bar-text">HP 
                 <span class="hp"></span> /
-                <span class="base-hp"></span>
+                <span class="max-hp"></span>
             </div>
         </div>
         <div class="mp-bar-container bar-container">
@@ -22,7 +22,7 @@
             </div>
             <div class="bar-text">MP 
                 <span class="mp"></span> /
-                <span class="base-mp"></span>
+                <span class="max-mp"></span>
             </div>
         </div>
     </div>
