Start on start menu

--- a/html/template.html
+++ b/html/template.html
@@ -48,6 +48,12 @@ $(window).load(init)
             <div class="speed-multiplier-box alert-box">3x speed</div>
         </div>
     </div>
+
+    <div class="vn-wrapper">
+        <div class="background"></div>
+
+    </div>
+
     <div class="game-info">
         {game_info}
     </div>
