--- a/html/vn.html
+++ b/html/vn.html
@@ -5,4 +5,8 @@
         <div class="box">
         </div>
     </div>
+    <div class="chapter-display">
+        <span class="main">Chapter <span class="number"></span>:</span>
+        <span class="name"></span>
+    </div>
 </div>
