Put in some of the script

--- a/html/game_info.html
+++ b/html/game_info.html
@@ -6,11 +6,11 @@
     </tr>
     <tr>
         <td class="control">F:</td>
-        <td>select / choose</td>
+        <td>"A button" - select / choose</td>
     </tr>
     <tr>
         <td class="control">D:</td>
-        <td>back</td>
+        <td>"B button" - back</td>
     </tr>
     <tr>
         <td class="control">S:</td>
@@ -22,7 +22,7 @@
     </tr>
     <tr>
         <td class="control">V:</td>
-        <td>toggle 3x speed</td>
+        <td>skip text / toggle 3x speed</td>
     </tr>
 </table>
 <br />
