Add location box

--- a/html/vn.html
+++ b/html/vn.html
@@ -17,6 +17,8 @@
     </div>
     
     <div class="scene">
+        <div class="location"></div>
+        
         <div class="chatbox">
             <div class="unit">
                 <div class="image"></div>
