--- a/html/template.html
+++ b/html/template.html
@@ -21,6 +21,7 @@ $(window).load(init)
             <div class="menu weapon-menu neutral-box">
             </div>
             {skills_box}
+            {item_info_box}
             {battle_stats_panel}
         </div>
         <div class="canvas-container">
