--- a/html/unit_info_window.html
+++ b/html/unit_info_window.html
@@ -22,6 +22,11 @@
         <div class="content">
             <div class="tab-content tab-content-inventory">
                 <div class="inventory"></div>
+                
+                <div class="controls">
+                    S - view item info
+                </div>
+    
                 <div class="combat-stats">
                     <table>
                         <tr>
