--- a/html/item_info_box.html
+++ b/html/item_info_box.html
@@ -18,5 +18,9 @@
             <td class="label">WEIGHT</td>
             <td class="value weight"></td>
         </tr>
+        <tr>
+            <td class="label">RANGE</td>
+            <td class="value range"></td>
+        </tr>
     </table>
 </div>
