--- a/html/skills_box.html
+++ b/html/skills_box.html
@@ -7,25 +7,29 @@
         <span></span>
     </div>
     <div class="stats">
-        <div class="row-mp-type">
-            <div class="half">
-                <span class="label">MP</span>
-                <span class="mp value"></span>
-            </div>
-            <div class="half half-type">
-                <span class="label">TYPE</span>
-                <span class="type value"></span>
-            </div>
+        <div class="half half-mp">
+            <span class="label">MP</span>
+            <span class="mp value"></span>
         </div>
-        <div class="row-might-range">
-            <div class="half">
-                <span class="label">MT</span>
-                <span class="might value"></span>
-            </div>
-            <div class="half">
-                <span class="label">RNG</span>
-                <span class="range value"></span>
-            </div>
+        <div class="half half-type">
+            <span class="label">TYPE</span>
+            <span class="type value"></span>
+        </div>
+        <div class="half half-hit">
+            <span class="label">HIT</span>
+            <span class="hit value"></span>
+        </div>
+        <div class="half half-might">
+            <span class="label">MT</span>
+            <span class="might value"></span>
+        </div>
+        <div class="half half-crit">
+            <span class="label">CRIT</span>
+            <span class="crit value"></span>
+        </div>
+        <div class="half half-range">
+            <span class="label">RNG</span>
+            <span class="range value"></span>
         </div>
     </div>
     <div class="desc">
