Write release notes

--- a/html/game_info.html
+++ b/html/game_info.html
@@ -14,7 +14,7 @@
     </tr>
     <tr>
         <td class="control">S:</td>
-        <td>more info (units, skills)</td>
+        <td>more info (units, skills, items)</td>
     </tr>
     <tr>
         <td class="control">E:</td>
@@ -26,7 +26,15 @@
     </tr>
 </table>
 <br />
+
 <h3>Release notes for demo-v0.01</h3>
 <ul>
+    <li>There's a start menu! And a story!</li>
+    <li>The four player units each have their basic skill. (Arrow has a healing skill.)</li>
+    <li>Use V to skip text, or to play the game at 3x speed.</li>
+    <li>Weapon stats are now displayed when choosing your weapon. You can also view weapon stats by pressing S while on the "Items" tab of the UnitInfoWindow.</li>
+    <li>Press F while the cursor is over an enemy to view that enemy's movement and attack range.</li>
+    <li>This version's Hard difficulty is the difficulty from earlier demos.</li>
+    <li>Firefox, Chrome, and Internet Explorer 11 are officially supported.</li>
+    <li>A manga adaptation of Aqua Emblem will begin serialization in the August issue of Jump Square!</li>
 </ul>
-This version has been tested in Firefox and Chrome. Please tell me if you find a bug.
