update game info

--- a/html/game_info.html
+++ b/html/game_info.html
@@ -25,6 +25,9 @@
         <td>skip text / toggle 3x speed</td>
     </tr>
 </table>
+<p>
+    <b>Supported browsers:</b> Chrome, Firefox. Mobile devices are not supported. 
+</p>
 <br />
 
 <h3>Release notes for demo-v0.01</h3>
@@ -35,6 +38,5 @@
     <li>Weapon stats are now displayed when choosing your weapon. You can also view weapon stats by pressing S while on the "Items" tab of the UnitInfoWindow.</li>
     <li>Press F while the cursor is over an enemy to view that enemy's movement and attack range.</li>
     <li>This version's Hard difficulty is the difficulty from earlier demos.</li>
-    <li>Firefox, Chrome, and Internet Explorer 11 are officially supported.</li>
     <li>A manga adaptation of Aqua Emblem will begin serialization in the August issue of Jump Square!</li>
 </ul>
