Work on start menus

--- a/html/vn.html
+++ b/html/vn.html
@@ -1,7 +1,9 @@
 <div class="vn-wrapper">
     <div class="start-menu-container">
-    
-        <div class="items"></div>
+        <div class="start-menu">
+            <div class="message"></div>
+            <div class="items"></div>
+        </div>
     </div>
     
     <div class="full-textbox">
