Start on item menu

--- a/html/template.html
+++ b/html/template.html
@@ -20,6 +20,8 @@ $(window).load(init)
             </div>
             <div class="menu weapon-menu neutral-box">
             </div>
+            <div class="menu item-menu neutral-box">
+            </div>
             {skills_box}
             {item_info_box}
             {battle_stats_panel}
