More work on item menu
Also commit new files that I forgot to commit

--- a/html/template.html
+++ b/html/template.html
@@ -16,12 +16,7 @@ $(window).load(init)
     <div class="game-wrapper">
         <div class="sidebar left-sidebar">
             {unit_info_box}
-            <div class="menu action-menu neutral-box">
-            </div>
-            <div class="menu weapon-menu neutral-box">
-            </div>
-            <div class="menu item-menu neutral-box">
-            </div>
+            {sidebar_menus}
             {skills_box}
             {item_info_box}
             {battle_stats_panel}
