Force discard complete

--- a/html/sidebar_menus.html
+++ b/html/sidebar_menus.html
@@ -2,11 +2,14 @@
 
 <div class="menu weapon-menu neutral-box"></div>
 
-<div class="menu item-menu neutral-box"></div>
+<div class="menu item-menu neutral-box">
+    <div class="message"></div>
+    <div class="menu-items"></div>
+</div>
 
 <div class="menu item-action-menu neutral-box"></div>
 
-<div class="item-action-menu-confirm neutral-box">
+<div class="menu item-action-menu-confirm neutral-box">
     Are you sure you want to discard this item?
-    <div class="menu"></div>
+    <div class="menu-items"></div>
 </div>
