Work on game-info section

--- a/html/game_info.html
+++ b/html/game_info.html
@@ -1,4 +1,5 @@
-<h3>Controls</h3>
+<p>version 0.2</p>
+<h3 class="first">Controls</h3>
 <table>
     <tr>
         <td class="control">Arrow keys:</td>
@@ -25,7 +26,29 @@
         <td>skip text / toggle 3x speed</td>
     </tr>
 </table>
-<p>
-    <b>Supported browsers:</b> Chrome, Firefox. Mobile devices are not supported. 
-</p>
-<br />
+
+<h3>How to play</h3>
+<a href="game_guide.html">
+    <div class="game-guide-link">
+        View the Game Guide
+    </div>
+</a>
+<p class="how-to-play">
+    Aqua Emblem is a lot like Fire Emblem. Use F to select your units (blue) and move them around the map.
+    Defeat the enemy army to beat the chapter. Click the button above to view the full Game Guide.
+</p> 
+<ul class="how-to-play-list">
+    <li><span class="defeat">You lose if ANY of your units die!</span></li>
+    <li><span class="first-aid">Use Arrow's First Aid skill to heal your units!</span> 
+        Units can even use healing skills on themselves unlike in Fire Emblem. 
+        You'll get more healing skills as the game goes on.</li>
+</ul>
+
+<h3>Supported browsers</h3> 
+Aqua Emblem is tested in Chrome, Firefox, and Internet Explorer 11. Mobile devices are not officially supported. The game probably works in Safari, but I don't test in Safari.
+
+<h3>Community</h3>
+Aqua Emblem is developed by me: Sam Magura, <b>srmagura AT ncsu.edu</b>. Did you like the game? Did you find a bug? Did you write an X-rated Ace/Shiina romance fanfic? Send me an email!</p>
+
+<p>The game is open source. Visit the <a href="https://github.com/srmagura/aqua-emblem">GitHub repository</a>.
+Also, special thanks to <a href="http://coffeescript.org">CoffeeScript</a>. Aqua Emblem is copyright 2014 Sam Magura. Released under the GNU General Public License.</p>
