Work on game guide

--- a/game_guide.html
+++ b/game_guide.html
@@ -3,8 +3,55 @@
 <head>
     <title>Aqua Emblem - Game Guide</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    
+    <link rel="stylesheet" type="text/css" href="css/game_guide.css" />
 </head>
 <body>
-Ain't nothin here yet
+<div class="wrapper">
+<div class="title-bar">
+    <img src="images/title_cropped.png" />
+    <span class="game-guide">Game Guide</span>
+    
+    <div class="return-link">
+        <a href="index.html">Play the game</a>
+    </div>
+</div>
+
+<div class="content">
+    <h3>First steps</h3>
+    <ul>
+        <li>Use the arrow keys to move the cursor (the purple box).</li>
+        <li>While the cursor is over one of your units (blue), press F to select the unit. Then move 
+        the cursor again to choose the unit's destination. Press F again to confirm the destination. 
+        Press D to deselect the unit.
+        <img src="images/game_guide/select.png" />
+        </li>
+        <li>Once you have chosen a destination, the action menu will appear. Use Up/Down and F to 
+        choose an action, or press D to go back.
+        <img src="images/game_guide/action_menu.png" /> 
+        </li><li>
+        Possible actions are:<br /><br/>
+            <ul>
+                <li>Attack: Available when an enemy unit is in range.</li>
+                <li>Skill: Use one of the unit's skills. Skills consume MP, but they have
+                useful special effects. See the Skills section for more information.</li>
+                <li>Trade: If you move next to one of your teammates, you can trade 
+                items between the two units.</li>
+                <li>Items: Opens the Items Menu. From this menu, you can equip weapons or
+                discard items you don't want.</li>
+                <li>Wait: Don't do anything. Ends this unit's turn.</li>
+            </ul>
+        </li>
+    </ul>
+    <h3>Other useful controls</h3>
+    <ul>
+        <li>Press E to open the End Turn menu. Press F to end your turn, or D to go back.
+        <img src="images/game_guide/end_turn.png" /></li>
+        <li>Press F while the cursor is over an enemy unit to view that unit's attack and
+        movement ranges. Press D to go back.
+        <img src="images/game_guide/enemy_range.png" /></li>
+    </ul>
+</div>
+</div>
 </body>
 </html>
