Work on game guide

--- a/html/game_info.html
+++ b/html/game_info.html
@@ -28,7 +28,7 @@
 </table>
 
 <h3>How to play</h3>
-<a href="game_guide.html">
+<a href="game_guide.html" target="_blank">
     <div class="game-guide-link">
         View the Game Guide
     </div>
