Rearrange game_info

--- a/html/game_info.html
+++ b/html/game_info.html
@@ -1,4 +1,7 @@
 <p>version 0.2</p>
+
+<div class="two-column">
+<div class="controls">
 <h3 class="first">Controls</h3>
 <table>
     <tr>
@@ -26,14 +29,16 @@
         <td>skip text / toggle 3x speed</td>
     </tr>
 </table>
+</div>
 
+<div class="how-to-play">
 <h3>How to play</h3>
 <a href="game_guide.html" target="_blank">
     <div class="game-guide-link">
         View the Game Guide
     </div>
 </a>
-<p class="how-to-play">
+<p>
     Aqua Emblem is a lot like Fire Emblem. Use F to select your units (blue) and move them around the map.
     Defeat the enemy army to beat the chapter. Click the button above to view the full Game Guide.
 </p> 
@@ -43,6 +48,8 @@
         Units can even use healing skills on themselves unlike in Fire Emblem. 
         You'll get more healing skills as the game goes on.</li>
 </ul>
+</div>
+</div>
 
 <h3>Supported browsers</h3> 
 Aqua Emblem is tested in Chrome, Firefox, and Internet Explorer 11. Mobile devices are not officially supported. The game probably works in Safari, but I don't test in Safari.
