--- a/html/battle_stats_panel.html
+++ b/html/battle_stats_panel.html
@@ -18,7 +18,7 @@
             <td class="stat def-hit red-box">
                 <span class="stat"></span>
             </td>
-            <td class="hit neutral-box">HIT</td>
+            <td class="hit neutral-box">Hit</td>
             <td class="stat atk-hit blue-box">
                 <span class="stat"></span>
             </td>
@@ -27,7 +27,7 @@
             <td class="stat def-dmg red-box">
                 <span class="stat"></span><span class="x2">&times;2</span>
             </td>
-            <td class="dmg neutral-box">DMG</td>
+            <td class="dmg neutral-box">Dmg</td>
             <td class="stat atk-dmg blue-box">
                 <span class="stat"></span><span class="x2">&times;2</span>
             </td>
@@ -36,7 +36,7 @@
             <td class="stat def-crt red-box">
                 <span class="stat"></span>
             </td>
-            <td class="crt neutral-box">CRT</td>
+            <td class="crt neutral-box">Crt</td>
             <td class="stat atk-crt blue-box">
                 <span class="stat"></span>
             </td>
