--- a/html/item_info_box.html
+++ b/html/item_info_box.html
@@ -3,23 +3,23 @@
     
     <table class="weapon-stats">
         <tr>
-            <td class="label">HIT</td>
+            <td class="label">Hit</td>
             <td class="value hit"></td>
         </tr>
         <tr>
-            <td class="label">MIGHT</td>
+            <td class="label">Might</td>
             <td class="value might"></td>
         </tr>
         <tr>
-            <td class="label">CRIT</td>
+            <td class="label">Crit</td>
             <td class="value crit"></td>
         </tr>
         <tr>
-            <td class="label">WEIGHT</td>
+            <td class="label">Weight</td>
             <td class="value weight"></td>
         </tr>
         <tr>
-            <td class="label">RANGE</td>
+            <td class="label">Range</td>
             <td class="value range"></td>
         </tr>
     </table>
