--- a/html/skills_box.html
+++ b/html/skills_box.html
@@ -12,23 +12,23 @@
             <span class="mp value"></span>
         </div>
         <div class="half half-type">
-            <span class="label">TYPE</span>
+            <span class="label">Type</span>
             <span class="type value"></span>
         </div>
         <div class="half half-hit">
-            <span class="label">HIT</span>
+            <span class="label">Hit</span>
             <span class="hit value"></span>
         </div>
         <div class="half half-might">
-            <span class="label">MT</span>
+            <span class="label">Might</span>
             <span class="might value"></span>
         </div>
         <div class="half half-crit">
-            <span class="label">CRIT</span>
+            <span class="label">Crit</span>
             <span class="crit value"></span>
         </div>
         <div class="half half-range">
-            <span class="label">RNG</span>
+            <span class="label">Range</span>
             <span class="range value"></span>
         </div>
     </div>
