--- a/html/terrain_box.html
+++ b/html/terrain_box.html
@@ -2,11 +2,11 @@
     <img /><span class="name"></span>
     <table>
         <tr>
-            <td class="label">EVADE</td>
+            <td class="label">Evade</td>
             <td class="stat evade"></td>
         </tr>
         <tr>
-            <td class="label">DEF/RES</td>
+            <td class="label">Def/res</td>
             <td class="stat def"></td>
         </tr>
     </table>
