--- a/html/unit_info_window.html
+++ b/html/unit_info_window.html
@@ -30,15 +30,15 @@
                 <div class="combat-stats">
                     <table>
                         <tr>
-                            <td class="label">HIT</td>
+                            <td class="label">Hit</td>
                             <td class="stat hit"></td>
-                            <td class="label">EVADE</td>
+                            <td class="label">Evade</td>
                             <td class="stat evade"></td>
                         </tr>
                         <tr>
-                            <td class="label">ATK</td>
+                            <td class="label">Atk</td>
                             <td class="stat atk"></td>
-                            <td class="label">CRIT</td>
+                            <td class="label">Crit</td>
                             <td class="stat crit"></td>
                         </tr>
                     </table>
@@ -48,27 +48,27 @@
                 <div class="stats">
                     <table>
                         <tr>
-                            <td class="label">STR</td>
+                            <td class="label">Str</td>
                             <td class="stat str"></td>
-                            <td class="label">SKILL</td>
+                            <td class="label">Skill</td>
                             <td class="stat skill"></td>
                         </tr>
                         <tr>
-                            <td class="label">MAG</td>
+                            <td class="label">Mag</td>
                             <td class="stat mag"></td>
-                            <td class="label">SPEED</td>
+                            <td class="label">Speed</td>
                             <td class="stat speed"></td>
                         </tr>
                         <tr>
-                            <td class="label">DEF</td>
+                            <td class="label">Def</td>
                             <td class="stat def"></td>
-                            <td class="label">LUCK</td>
+                            <td class="label">Luck</td>
                             <td class="stat luck"></td>
                         </tr>
                         <tr>
-                            <td class="label">RES</td>
+                            <td class="label">Res</td>
                             <td class="stat res"></td>
-                            <td class="label">MOVE</td>
+                            <td class="label">Move</td>
                             <td class="stat move"></td>
                         </tr>
                     </table>
