Browser compatibility with chrome complete?

--- a/html/sidebar_menus.html
+++ b/html/sidebar_menus.html
@@ -10,6 +10,6 @@
 <div class="menu item-action-menu neutral-box"></div>
 
 <div class="menu item-action-menu-confirm neutral-box">
-    Are you sure you want to discard this item?
+    <div class="message">Are you sure you want to discard this item?</div>
     <div class="menu-items"></div>
 </div>
