--- a/html/level_up_window.html
+++ b/html/level_up_window.html
@@ -27,48 +27,48 @@
                 </tr>
 
                 <tr>
-                    <td class="label">STR</td>
+                    <td class="label">Str</td>
                     <td class="stat str">
                         <span></span><img src="images/up_arrow.png" />
                     </td>
 
-                    <td class="label">SKILL</td>
+                    <td class="label">Skill</td>
                     <td class="stat skill">
                         <span></span><img src="images/up_arrow.png" />
                     </td>
                 </tr>
 
                 <tr>
-                    <td class="label">MAG</td>
+                    <td class="label">Mag</td>
                     <td class="stat mag">
                         <span></span><img src="images/up_arrow.png" />
                     </td>
 
-                    <td class="label">SPEED</td>
+                    <td class="label">Speed</td>
                     <td class="stat speed">
                         <span></span><img src="images/up_arrow.png" />
                     </td>
                 </tr>
 
                 <tr>
-                    <td class="label">DEF</td>
+                    <td class="label">Def</td>
                     <td class="stat def">
                         <span></span><img src="images/up_arrow.png" />
                     </td>
 
-                    <td class="label">LUCK</td>
+                    <td class="label">Luck</td>
                     <td class="stat luck">
                         <span></span><img src="images/up_arrow.png" />
                     </td>
                 </tr>
 
                 <tr>
-                    <td class="label">RES</td>
+                    <td class="label">Res</td>
                     <td class="stat res">
                         <span></span><img src="images/up_arrow.png" />
                     </td>
 
-                    <td class="label">MOVE</td>
+                    <td class="label">Move</td>
                     <td class="stat move">
                         <span></span><img src="images/up_arrow.png" />
                     </td>
