--- a/html/level_up_window.html
+++ b/html/level_up_window.html
@@ -76,5 +76,8 @@
 
             </table>
         </div>
+        <div class="continue">
+            Press F to continue.
+        </div>
     </div>
 </div>
