create brave lance

--- a/html/battle_stats_panel.html
+++ b/html/battle_stats_panel.html
@@ -25,11 +25,11 @@
         </tr>
         <tr>
             <td class="stat def-dmg red-box">
-                <span class="stat"></span><span class="x2">&times;2</span>
+                <span class="stat"></span><span class="multiplier">&times;<span class="number"></span></span>
             </td>
             <td class="dmg neutral-box">Dmg</td>
             <td class="stat atk-dmg blue-box">
-                <span class="stat"></span><span class="x2">&times;2</span>
+                <span class="stat"></span><span class="multiplier">&times;<span class="number"></span></span>
             </td>
         </tr>
         <tr>
